--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,7 +6,7 @@
 
 .portfolio-video{
   width: 100%;
-  height: 100%
+  height: 100%;
   margin: 50px auto;
   padding: 0 10px;
 }
@@ -17,15 +17,22 @@
 
 @media (max-width: 500px){
   table{
-    font-size: 0.8rem;
+    font-size: 0.5rem;
   }
 
   #carouselSkills{
-    font-size: 0.7rem;
+    font-size: 0.5rem;
   }
 
   .name{
-    font-size: 350%;
+    font-size: 300%;
+  }
+
+  .portfolio-video{
+    width: 100%;
+    height: 234px;
+    margin: 50px auto;
+    padding: 0 10px;
   }
 }
 
