--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,16 +4,19 @@
   margin: 10px;
 }
 
+.detailed-skill-row{
+  margin: 50px auto;
+}
+
 .portfolio-video{
   width: 100%;
-  height: 100%;
+  height: 361px;
   margin: 50px auto;
   padding: 0 10px;
 }
 
-.detailed-skill-row{
-  margin: 50px auto;
-}
+
+
 
 @media (max-width: 500px){
   table{
@@ -34,8 +37,23 @@
     margin: 50px auto;
     padding: 0 10px;
   }
-}
 
+  .ss-pc{
+    content: 'PC App Dev';
+  }
+
+  .ss-mobile{
+    content: "Mobile App Dev";
+  }
+
+  .ss-data{
+    content: "Database Admin";
+  }
+
+  .ss-web{
+    content: "Web App Dev";
+  }
+}
 
 
 td{
