--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -10,16 +10,58 @@
 
 .portfolio-video{
   width: 100%;
+  height: 361px;
   margin: 50px auto;
   padding: 0 10px;
 }
+
+
+
+
+@media (max-width: 500px){
+  table{
+    font-size: 0.5rem;
+  }
+
+  #carouselSkills{
+    font-size: 0.7rem;
+  }
+
+  .name{
+    font-size: 300%;
+  }
+
+  .portfolio-video{
+    width: 100%;
+    height: 234px;
+    margin: 50px auto;
+    padding: 0 10px;
+  }
+
+  .ss-pc{
+    content: 'PC App Dev';
+  }
+
+  .ss-mobile{
+    content: "Mobile App Dev";
+  }
+
+  .ss-data{
+    content: "Database Admin";
+  }
+
+  .ss-web{
+    content: "Web App Dev";
+  }
+}
+
 
 td{
   width: 25%;
 }
 
 .links-dark{
-  color: #A8AEB5;
+  color: #565F69;
   text-decoration: none;
 }
 
@@ -41,7 +83,7 @@ td{
 @media (min-width: 900px){
   .portfolio-video{
     width: 664px;
-    height: 374px;
+    heigh: 374px;
     margin: 10px;
   }
 
@@ -93,7 +135,7 @@ hr{
 }
 
 
-/* Headings */
+/* Haedings */
 h1{
   font-size: 5rem;
   font-weight: 900;
@@ -109,12 +151,16 @@ h2{
 
 
 #title{
-  padding-top: 30px;
+  padding-top: 50px;
   padding-bottom: 70px;
 }
 
+.title-image{
+  width: 50%;
+}
+
 .navbar{
-  margin-bottom: 0px;
+  margin-bottom: 10px;
 }
 
 .subtitle{
@@ -128,7 +174,7 @@ h2{
 
 
 #work{
-  padding-top: 20px;
+  padding-top: 30px;
 }
 
 
