--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -39,9 +39,10 @@
   }
 
   .portfolio-images{
-    width: 95%;
+    width: 90%;
     border-radius: 5%;
     margin: 10px;
+    padding: 0 10px;
   }
 
   .ss-pc{
